- minor fix for scroll overflow

--- a/src/components/assign-lesson-drv/scss/_lessonList.scss
+++ b/src/components/assign-lesson-drv/scss/_lessonList.scss
@@ -47,7 +47,7 @@ lesson-list {
             //height: calc(100% - 100px);
             //max-height: $rowHeight * 8;
             height: $rowHeight * 8;
-            overflow-y: scroll;
+            overflow-y: auto;
             overflow-x: hidden;
             margin:0 10px;
         }
